[package]
name = "nr_actors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
ractor = "0.9.0"
ractor_cluster = "0.9.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
