[package]
name = "nr_nats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nr_actors = { path = "../nr_actors" }
cg-nano = { git = "https://github.com/credibil-grid/nano.git", branch="main" }
anyhow = "1.0.72"
ractor = "0.9.0"
ractor_cluster = "0.9.0"
tokio = "1.31.0"
async-trait = "0.1.73"
async-nats = "0.31.0"
bytes = "1.4.0"
serde = "1.0.183"
