[package]
name = "nr_ractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
nr_actors = { path = "../nr_actors" }
ractor = "0.9.0"
ractor_cluster = "0.9.0"
tokio = { version = "1.31.0", features = [ "macros", "rt", "sync", "signal", "time" ] }
